--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@bahoque/client-service-core": "^1.0.3",
     "@feathersjs/feathers": "^4.5.11",
     "lodash": "^4.17.20",
-    "rxjs": "^6.6.6",
+    "rxjs": "^6.6.6"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.168",
